# SI

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  Si.hpp  SiBase.hpp  SiExtended.cpp  SiExtended.hpp  SiGenerator.hpp  SiImpl.hpp  SiLiterals.hpp  SiPrinter.cpp  SiPrinter.hpp  SiPrinterExtended.cpp  SiPrinterExtended.hpp  SiStl.hpp  SiUtil.hpp  sonar-project.properties
.github/workflows/: compile.yml  static_analysis.yml
examples/: CMakeLists.txt  example.cpp
include/SI/: Si.hpp  SiBase.hpp  SiExtended.hpp  SiGenerator.hpp  SiImpl.hpp  SiPrinter.hpp  SiPrinterExtended.hpp  SiStl.hpp
src/: SiPrinter.cpp  SiPrinterExtended.cpp
